[project]
name = "flight-tracker-led"
version = "1.0.0"
description = "Real-time overhead flight tracker for RGB LED matrix panels"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
    "Pillow>=9.0",
]

[project.optional-dependencies]
emulator = [
    "pygame>=2.5",
    "numpy>=1.24",
]

[tool.setuptools]
py-modules = ["main", "display", "config", "flight_data", "flight_processor", "emulator"]

[project.scripts]
flight-tracker = "main:main"
